--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation libs.guava
     // For mapping json data
     implementation "com.fasterxml.jackson.core:jackson-databind:2.12.6"
+    implementation "org.mindrot:jbcrypt:0.4"
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
